--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     </head>
     <body>
         <header class="header">
-            <div class="logo-box">
-                <img src="img/logo-white.png" alt="logo" class="logo">
+            <div class="header__logo-box">
+                <img src="img/logo-white.png" alt="logo" class="header__logo">
             </div>
-            <div class="text-area">
+            <div class="header__text-area">
                 <h1 class="primary-heading">
-                    <span class="primary-heading-main">Outdoors</span>
-                    <span class="primary-heading-sub">is where life happens</span>
+                    <span class="primary-heading--main">Outdoors</span>
+                    <span class="primary-heading--sub">is where life happens</span>
                 </h1>
-                <a href="#" class="btn btn-white btn-animated">Discover Packages</a>
+                <a href="#" class="btn btn--white btn--animated">Discover Packages</a>
             </div>
         </header>
     </body>
